# petal

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO.txt  fix.md  justfile  mise.toml  todo.md
.cargo/: config
.github/workflows/: ci.yml
petal_cli/: Cargo.toml
petal_cli/src/: main.rs
petal_core/: Cargo.toml
petal_core/src/: ast.rs  ir.rs  lexer.rs  lib.rs  parser.rs  precedence.rs  source_info.rs  token.rs  types.rs  wasm.rs  wat.rs
petal_core/src/codegen/: context.rs  mod.rs
petal_core/src/ir/: mod.rs  pretty_print.rs
petal_core/src/semantics/: analysis.rs  constraint_generation.rs  context.rs  errors.rs  mod.rs  symbol_generation.rs  symbol_table.rs  typechecker.rs
petal_core/src/snapshots/: petal__petal__lexer__tests__identifiers.snap  petal__petal__lexer__tests__keywords.snap  petal__petal__lexer__tests__strings-2.snap  petal__petal__parser__tests__binary_associativity.snap  petal__petal__parser__tests__binary_prec-2.snap  petal__petal__parser__tests__binary_prec-3.snap  petal__petal__parser__tests__binary_prec-4.snap  petal__petal__parser__tests__binary_prec.snap  petal__petal__parser__tests__calls-3.snap  petal__petal__parser__tests__functions-2.snap  petal__petal__parser__tests__functions-4.snap  petal__petal__parser__tests__functions.snap  petal__petal__parser__tests__groups-3.snap  petal__petal__parser__tests__identifiers-2.snap  petal__petal__parser__tests__identifiers.snap  petal__petal__parser__tests__let_declarations-3.snap  petal__petal__parser__tests__let_declarations.snap  petal__petal__parser__tests__unary_prec-2.snap  petal__petal__parser__tests__unary_prec-3.snap  petal_core__lexer__tests__comments.snap  petal_core__lexer__tests__equal_operators.snap  petal_core__lexer__tests__groups.snap  petal_core__lexer__tests__identifiers.snap  petal_core__lexer__tests__keywords.snap  petal_core__lexer__tests__numbers.snap  petal_core__lexer__tests__single_letter_operators-2.snap  petal_core__lexer__tests__single_letter_operators.snap  petal_core__lexer__tests__strings-2.snap  petal_core__lexer__tests__strings.snap  petal_core__lexer__tests__whitespace.snap  petal_core__parser__tests__assignment-2.snap  petal_core__parser__tests__assignment.snap  petal_core__parser__tests__binary_associativity-2.snap  petal_core__parser__tests__binary_associativity-3.snap  petal_core__parser__tests__binary_associativity.snap  petal_core__parser__tests__binary_prec-2.snap  petal_core__parser__tests__binary_prec-3.snap  petal_core__parser__tests__binary_prec-4.snap  petal_core__parser__tests__binary_prec.snap  petal_core__parser__tests__calls-2.snap  (+37 more)
petal_runtime/: Cargo.toml
petal_runtime/src/: lib.rs  linker.rs  state.rs
petal_smoke/: Cargo.toml
petal_tests/: Cargo.toml
petal_tests/cases/: assignment.petal  calls.petal  comparison.petal  if.petal  math.petal  scoping.petal  simple.petal  while.petal
scripts/: benchmark.sh  optimize.sh
src/: main.rs
src/petal/: analysis.rs  (+22 more)
(+76 files in other folders)
