[package]
name = "petal"
version = "0.1.0"
edition = "2021"
authors = ["Jake Runzer <jakerunzer@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.4", features = ["derive"] }
colored = "2.0.0"
insta = { version = "1.29.0", features = ["json"] }
lazy_static = "1.4.0"
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.15"
slotmap = "1.0.6"
thiserror = "1.0.40"
wasm-encoder = "0.26.0"
wasmer = "3.3.0"
wasmparser = "0.104.0"
wasmprinter = "0.2.56"
wasmtime = "8.0.1"
wast = "57.0.0"
wat = "1.0.63"
