[workspace]
members = ["petal_core", "petal_cli", "petal_runtime", "petal_tests"]
resolver = "2"
default-members = ["petal_cli"]

[workspace.dependencies]
anyhow = "1.0.70"
colored = "2.0.0"
insta = { version = "1.29.0", features = ["json"] }
lazy_static = "1.4.0"
miette = { version = "5.9.0", features = ["fancy"] }
thiserror = "1.0.40"
wasmtime = "8.0.1"
